# min

./: .gitignore  CMakeLists.txt  README.md  TODO  _config.yml  index.md
assets/css/: style.scss
src/example/min/: hello.min  hello.minas  test_float.minas  test_gc.minas  test_list.minas
src/main/min/: minas.cc  scratch.cc  test_result.cc  test_vm.cc
src/main/min/common/: debug.h  indexed_list.h  managed.h  result.h  to_string.h
src/main/min/def/: directive.def  op.def  types.def
src/main/min/io/: assembly_interpreter.cc  assembly_interpreter.h  assembly_lexer.cc  assembly_lexer.h  assembly_reader.cc  assembly_reader.h  term_matcher.h
src/main/min/lib/: io.cc  io.h  string.cc  string.h
src/main/min/vm/: assembly.cc  assembly.h  collector.h  definition.cc  definition.h  directive.cc  directive.h  engine.cc  engine.h  environment.cc  environment.h  executor.cc  executor.h  heap.h  module.cc  module.h  module_table.cc  module_table.h  ms_collector.cc  ms_collector.h  native.cc  native.h  op.cc  op.h  op_writer.cc  op_writer.h  options.h  stack.cc  stack.h  string_utils.cc  string_utils.h
src/main/min/vm/memory/: collector.cc  collector.h  ms_collector.cc  ms_collector.h  simple_collector.cc  simple_collector.h
